--- a/UniversalSportsHub/Site.Master
+++ b/UniversalSportsHub/Site.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %> - UniversalSportsHub</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -37,8 +37,8 @@
                 <%--Site Scripts--%>
             </Scripts>
         </asp:ScriptManager>
-
-        <div class="navbar navbar-inverse navbar-fixed-top">
+        
+        <div class="navbar navbar-inverse">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -46,15 +46,28 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">UniversalSportsHub</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
+                        <li><a runat="server" href="~/Customer">Customers</a></li>
+                        <li><a runat="server" href="~/Activity">Activities</a></li>
+                        <li><a runat="server" href="~/Equipment">Equipments</a></li>
+                        <li><a runat="server" href="~/Room">Rooms</a></li>
+                        <li><a runat="server" href="~/Staff">Staffs</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/Session-Staff">Session-Staff</a></li>
                     </ul>
-                    <asp:LoginView runat="server" ViewStateMode="Disabled">
+                    <div class="navbar navbar-default" style="margin-top:50px;">
+            <ul class="nav navbar-nav">
+                        <li><a runat="server" href="~/Session-Staff">Session-Staff Schedule</a></li>
+                        <li><a runat="server" href="~/Session-Equipment">Session-Equipment Schedule</a></li>
+                        <li><a runat="server" href="~/Activity-Schedule">Activity-Schedule</a></li>
+                        
+                    </ul>
+        </div>
+                    <%--<asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a runat="server" href="~/Account/Register">Register</a></li>
@@ -69,16 +82,17 @@
                                 </li>
                             </ul>
                         </LoggedInTemplate>
-                    </asp:LoginView>
+                    </asp:LoginView>--%>
                 </div>
             </div>
         </div>
+        
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - UniversalSportsHub - Developed by Rajan Tandukar</p>
             </footer>
         </div>
     </form>
