--- a/UniversalSportsHub/Content/Site.css
+++ b/UniversalSportsHub/Content/Site.css
@@ -1,6 +1,6 @@
 ﻿/* Move down content because we have a fixed navbar that is 50px tall */
 body {
-    padding-top: 50px;
+    padding-top: 0px;
     padding-bottom: 20px;
 }
 
@@ -27,6 +27,25 @@ input[type="select"] {
     max-width: 280px;
 }
 
+/* custom css */
+.navbar-inverse {
+    background-color: #808080;
+    border-color: #080808;
+}
+.navbar-inverse .navbar-brand {
+    color: #E3EAEB;
+}
+.navbar-inverse .navbar-nav > li > a {
+    color: #fff;
+}
+.navbar-default {
+    background-color: #696969;
+    border-color: #dddddd;
+}
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+    color: #E3EAEB;
+    background-color: transparent;
+}
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .jumbotron {
